[gd_scene load_steps=10 format=3 uid="uid://c5jo00ibposd8"]

[ext_resource type="Theme" uid="uid://d4enr3o3c1o82" path="res://Resources/ui.tres" id="1_bmudn"]
[ext_resource type="Script" path="res://Scripts/player_ui.gd" id="1_e1an2"]
[ext_resource type="Texture2D" uid="uid://j8dobchkuwv6" path="res://Assets/healtbarBackground.png" id="3_k80yp"]
[ext_resource type="Script" path="res://Scripts/EffectContainer.gd" id="3_ks6vw"]
[ext_resource type="Script" path="res://Scripts/BuffContainer.gd" id="4_1qu4f"]
[ext_resource type="Texture2D" uid="uid://r62o1ajn18ro" path="res://Assets/HealthbarTexture.png" id="4_brne4"]
[ext_resource type="Texture2D" uid="uid://byv2exxs2knrb" path="res://Assets/HealthbarFill.png" id="4_sehet"]
[ext_resource type="Script" path="res://Scripts/SceneChangeButton.gd" id="5_hvrfu"]
[ext_resource type="AudioStream" uid="uid://dxhwyhmk1oj4y" path="res://Assets/AudioFiles/shipLeaving.mp3" id="6_phkjt"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_bmudn")
script = ExtResource("1_e1an2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("1_bmudn")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_bmudn")
theme_override_constants/separation = 50

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_bmudn")
step = 0.01
value = 100.0
texture_under = ExtResource("3_k80yp")
texture_over = ExtResource("4_brne4")
texture_progress = ExtResource("4_sehet")
texture_progress_offset = Vector2(12, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_bmudn")
theme_override_constants/separation = 20

[node name="DollarSign" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_bmudn")
theme_override_colors/font_color = Color(1, 0.862745, 0, 1)
text = "$"
horizontal_alignment = 2

[node name="MoneyLabel" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_bmudn")
theme_override_colors/font_color = Color(1, 0.862745, 0, 1)
horizontal_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -145.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_bmudn")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme = ExtResource("1_bmudn")
theme_override_constants/separation = 50

[node name="EffectContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_bmudn")
script = ExtResource("3_ks6vw")

[node name="AmmoLabel" type="Label" parent="MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_bmudn")
text = "0/0"

[node name="BuffContainer" type="HBoxContainer" parent="MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("1_bmudn")
script = ExtResource("4_1qu4f")

[node name="LeaveButton" type="Button" parent="MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("1_bmudn")
text = "Leave"
script = ExtResource("5_hvrfu")
scene = "res://Scenes/ShipMenu.tscn"
playFade = true
departure = ExtResource("6_phkjt")
